--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <form id="searchForm" class="search-form">
       <select id="searchBy" name="searchBy" class="search-select">
         <option value="all">הכל</option>
-        <option value="serial">מספר סידורי</option>
+        <option value="serial">מס' סידורי</option>
         <option value="name">שם השיר</option>
-        <option value="album">שם האלבום</option>
+        <option value="album">שם אלבום</option>
         <option value="singer">שם הזמר</option>
       </select>
 <div class="input-container">
