עדכון עיצוב הודעת אזהרה

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
 	  </div>
 	</div>
 
+
+	<div id="modalOverlay" class="modal-overlay">
+	  <div class="modal-content">
+		<span id="modalMessage"></span><br>
+		<button id="modalOkButton" style="font-family: tahoma">אישור</button>
+	  </div>
+	</div>
+
   <div id="resultsTable">
 	<table>
 	  <thead>
