שדרוג עיצוב הודעת הורדה

--- a/index2.html
+++ b/index2.html
@@ -62,10 +62,20 @@
   </div>
 
 
-	<div id="loadingMessage" class="loading-message">
-	  <img src="site/loading.gif" alt="טעינה" />
-	  <span>מוריד...</span>
-	</div>
+<div id="loadingMessage" class="loading-message">
+  <div class="progress-bar-container">
+    <img src="site/loading.gif" alt="טעינה" />
+    <span id="progressText">מתחיל להוריד...</span>
+    <div class="progress-bar">
+      <div id="progress" class="progress"></div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
 	<div id="modalOverlay" class="modal-overlay">
 	  <div class="modal-content">
 		<span id="modalMessage"></span><br>
