תיקוני תצוגה קלים

--- a/index2.html
+++ b/index2.html
@@ -65,7 +65,7 @@
 <div id="loadingMessage" class="loading-message">
   <div class="progress-bar-container">
     <img src="site/loading.gif" alt="טעינה" />
-    <span id="progressText">מתחיל להוריד...</span>
+    <span id="progressText"></span>
     <div class="progress-bar">
       <div id="progress" class="progress"></div>
     </div>
@@ -116,7 +116,7 @@
   </div>
 
   <div class="fixed-bottom">
-    <p>בשימוש במערכת אתם מאשרים את השימוש בכתובת המייל שלכם</p>
+    <p>גרסת בטא ניסיונית - לתקלות ניתן לשלוח משוב למייל היוצר</p>
   </div>
 </div>
 
