--- a/index2.html
+++ b/index2.html
@@ -53,7 +53,12 @@
         <option value="album">שם האלבום</option>
         <option value="singer">שם הזמר</option>
       </select>
-      <input type="text" id="searchInput" name="searchInput" class="search-input awesomplete" class="search-input" placeholder="הזן מילות מפתח..." autofocus>
+	  
+	<div class="input-container">
+	  <input type="text" id="searchInput" name="searchInput" class="search-input awesomplete" class="search-input" placeholder="הזן מילות מפתח..." autofocus>
+	  <div id="textBubble" class="text-bubble">לחפש במאגר של 70,000 שירים</div>
+	</div>
+
       <button type="submit" class="search-button">חפש</button>
       <div class="filter-container">
         <button id="singleFilter" class="filter-button-light">הצג סינגלים בלבד</button>
