--- a/index2.html
+++ b/index2.html
@@ -104,13 +104,15 @@
     <td colspan="4">
       <center id="instructions">
         <div class="instructions-container">
-          <h3>הוראות שימוש</h3>
-          <p><b>♪</b> חפש שיר באופן חופשי</p>
+          <h3>הוראות שימוש</h3><br>
+          <p><b>♪</b> חפש שיר, זמר או אלבום באופן חופשי</p>
+          <p><b>♪</b> עבור על התוצאות ובחר בשיר הרצוי לך</p>
           <p><b>♪</b> לחץ על המספר הסידורי של השיר</p>
-          <p><b>♪</b> זה יוביל אותך להודעת מייל, שלח אותה</p>
-          <p><b>♪</b> תוך כדקה, ישלח אליך השיר המבוקש</p>
+          <p><b>♪</b> השיר המבוקש ירד ישירות למחשב שלך!</p>
+		  <br>
           <p class="disclaimer">שים לב שבמערכת זו ניתן להוריד סינגלים בלבד!</p>
-        </div>
+        <br>
+		</div>
       </center>
     </td>
   </tr>
