--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 
     </table>
   </div>
-
+<!-- בשימוש במערכת אתם מאשרים את השימוש בכתובת המייל שלכם -->
 	<div class="fixed-bottom">
-		<p>בשימוש במערכת אתם מאשרים את השימוש בכתובת המייל שלכם</p>
+		<p>מעוניינים לקבל גישה מלאה למאגר <b>ב-50% הנחה?</b> <a style="" id="music-in-drive" href="https://forms.gle/couZadvYGJ41hhYs7" target="_blank">הרשמו כאן!</a></p>
 	  </div>
 	</div>
 
