--- a/index2.html
+++ b/index2.html
@@ -121,11 +121,12 @@
     </table>
 	
   </div>
-
+<!--  גרסת בטא ניסיונית - לתקלות ניתן לשלוח משוב למייל היוצר  -->
   <div class="fixed-bottom">
-    <p>גרסת בטא ניסיונית - לתקלות ניתן לשלוח משוב למייל היוצר</p>
+    <p>מעוניינים לקבל גישה מלאה למאגר <b>ב-50% הנחה?</b> <a style="" id="music-in-drive" href="https://forms.gle/couZadvYGJ41hhYs7" target="_blank">הרשמו כאן!</a></p>
   </div>
 </div>
+
 
   <script src="site/new-script.js"></script>
   <script src="site/messages.js"></script>
