--- a/index2.html
+++ b/index2.html
@@ -119,6 +119,8 @@
 </tbody>
 
     </table>
+<!-- Add this button in your HTML where you want it to appear -->
+<button id="loadMoreButton">טען עוד</button>
 	
   </div>
 <!--  גרסת בטא ניסיונית - לתקלות ניתן לשלוח משוב למייל היוצר  -->
