--- a/index2.html
+++ b/index2.html
@@ -125,7 +125,7 @@
   </div>
 <!--  גרסת בטא ניסיונית - לתקלות ניתן לשלוח משוב למייל היוצר  -->
   <div class="fixed-bottom">
-    <p>מעוניינים לקבל גישה מלאה למאגר <b>ב-50% הנחה?</b> <a style="" id="music-in-drive" href="https://forms.gle/couZadvYGJ41hhYs7" target="_blank">הרשמו כאן!</a></p>
+    <p>מעוניינים לקבל גישה מלאה למאגר <b>ב-50% הנחה?</b> <a id="music-in-drive" href="https://forms.gle/couZadvYGJ41hhYs7" target="_blank">הרשמו כאן!</a></p>
   </div>
 </div>
 
