--- a/register.html
+++ b/register.html
@@ -56,7 +56,7 @@ modal.appendChild(confirmButton);
 // Add a click event listener to the confirmation button
 confirmButton.addEventListener("click", function() {
   // Define the URL you want to navigate to
-  var newURL = "file:///C:/Users/משתמש/Documents/GitHub/shir-bot/index.html";
+  var newURL = "https://nhlocal.github.io/shir-bot";
   // Use window.location.href to navigate to the new URL
   window.location.href = newURL;
 });
