--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="site/styles.css">
     <link rel="stylesheet" href="site/personal.css">
 </head>
-<body dir="rtl">
+<body dir="rtl" style="background-color:#FFFEDB;">
   <!-- This is where the ad iframe will be displayed -->
 
   <!-- Your JavaScript code to create and append the iframe goes here -->
